# circleci-orb-unpack

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: integration.rs
tests/expected/all_components/commands/: command1.yml
tests/expected/all_components/examples/: example0.yml  example1.yml
tests/expected/all_components/executors/: my-executor.yml
tests/expected/all_components/jobs/: job0.yml
tests/expected/no_components/: @orb.yml
tests/expected/only_commands/commands/: command0.yml
tests/expected/only_jobs/: @orb.yml
tests/expected/only_jobs/jobs/: job1.yml
tests/inputs/: all_components.yaml  one_executor.yaml  only_commands.yaml  only_jobs.yaml
