[package]
name = "orb-unpack"
version = "0.1.0"
edition = "2021"
authors = ["Xavientois <joshua.rampersad@hotmail.com>"]
repository = "https://github.com/Xavientois/circleci-orb-unpack"
description = "Unpack a CircleCI orb.yml into separate files compatible with orb packing"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
yaml-rust = "0.4"
