[package]
name = "orb-unpack"
version = "0.1.1"
edition = "2021"
authors = ["Xavientois <joshua.rampersad@hotmail.com>"]
repository = "https://github.com/Xavientois/circleci-orb-unpack"
license = "Apache-2.0"
description = "Unpack a CircleCI orb.yml into separate files compatible with orb packing"
categories = ["command-line-utilities", "config"]
keywords = ["circle-ci", "config"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
yaml-rust = "0.4"
